Se agregan configuraciones de keycloak

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 quarkus.http.port=8083
+#quarkus.oidc.auth-server-url=http://keycloak-server/auth/realms/your-realm
+quarkus.oidc.auth-server-url=http://localhost:8086/realms/master/
+quarkus.oidc.client-id=microprofile
+quarkus.oidc.credentials.secret=g0VPNy4A3WdUcoNPqSVTI3Xo4LNRK4OJ
+quarkus.oidc.tls.verification=none
